iproute2 (5.10.0-4jens19) UNRELEASED; urgency=medium

  * Add qdisc inner workings documentation
  * Java: improve sojourn time display
  * Record the “real one-way delay” through sch_janz (comprised of
    extralatency, queue delay and (later…) retransmission delays)
  * Mention -rt kernel trouble; renicing ksoftirqd is probably unneeded
  * Record queue size only every 500 ms unless triggered (which it is
    frequently)
  * Trigger queue size report upon and just before sending the first
    packet after a rate change unless already triggered/scheduled
  * Add tab-separated jensdmp output format, for jensjsacquire

 -- Thorsten Glaser <t.glaser@tarent.de>  Fri, 30 Dec 2022 14:22:54 +0100

iproute2 (5.10.0-4jens18) tarent; urgency=medium

  * Install ratedemo as well
  * Re-add compatibility with Linux 5.4 as used on focal

 -- Thorsten Glaser <t.glaser@tarent.de>  Thu, 17 Nov 2022 12:11:51 +0100

iproute2 (5.10.0-4jens17) tarent; urgency=high

  * Fix an oops in the DKMS file

 -- Thorsten Glaser <t.glaser@tarent.de>  Wed, 09 Nov 2022 19:12:31 +0100

iproute2 (5.10.0-4jens16) tarent; urgency=medium

  * Add sch_janzdbg kernel module, with self-monitoring for performance
    of the kernel qdisc_watchdog functionality
  * Add debugfs-based mass rate change functionality and example program
  * Update documentation accordingly
  * Note performance considerations (renice ksoftirqd) in the docs

 -- Thorsten Glaser <t.glaser@tarent.de>  Tue, 08 Nov 2022 23:52:56 +0100

iproute2 (5.10.0-4jens15) tarent; urgency=medium

  * iproute2 Provides iproute-janz to indicate the patched version, so
    consumers can Depends on iproute2 (= 5.10.0-4jens15) | iproute-janz
  * Do not list the current extra latency in TC_JANZ_RELAY_QUEUESZ after
    all; this is less flexible, and the value is not the one in use for
    what’s reported anyway
  * Keep times in nanoseconds everywhere, as recommended by Dave Täht,