@@ -16,6 +16,7 @@ enum {
 	TCA_JANZ_SUBBUFS,
 	TCA_JANZ_FRAGCACHE,
 	TCA_JANZ_XLATENCY,
+	TCA_JANZ_IGNORETOS,
 	__TCA_JANZ_MAX
 };
 
@@ -50,7 +51,7 @@ struct tc_janz_relay {
 	union {
 		__u8 z8[16];	/* 128 bits of structured extra data */
 		struct {
-			__u32 psize;
+			__u32 psize;	/* bit30‥31: FIFO# (1, 2 or 3) */
 			__u8 ipver;
 			__u8 nexthdr;
 			__u16 sport;	/* host byteorder */
